Refatoração da view List
criado uma viewmodel e uma partial view

--- a/Views/Lanches/List.cshtml
+++ b/Views/Lanches/List.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<LanchesMac.Models.Lanche>
+@model LancheListViewModel
 @{
     ViewData["Title"] = "Todos os Lanches";
 }
@@ -11,15 +11,9 @@
 <div class="container">
     <div class="row">
 
-        @foreach (var item in Model)
+        @foreach (var item in Model.Lanches)
         {
-            <div class="col-sm-4 col-md-4 col-lg-4">
-                <p><img src="@item.ImagemUrl" class="img-fluid"></p>
-                
-                <h3>@item.Preco.ToString("C")</h3>
-                <h4>@item.Nome</h4>
-                <p>@item.DescricaoCurta</p>
-            </div>
+            <partial name="_LanchesResumo" for="@item" />
         }
 
     </div>
