--- a/Views/Lanches/List.cshtml
+++ b/Views/Lanches/List.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Todos os Lanches";
 }
 <div>
-    <h2>@ViewData["Title"]</h2>
+    <h2>@Model.CategoriaAtual</h2>
 </div>
 <hr />
 <br />
