--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,15 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model HomeViewModel
+
 <partial name="_Carousel" />
+
+<h2>Os preferios da semana </h2>
+<h4>Tá com fome ???</h4>
+
+<div class="row">
+    @foreach(var lanche in Model.LanchesPreferidos)
+    {
+    <partial name="_LanchesResumo" for="@lanche" />
+    }
+</div>
 
 
