--- a/Views/Shared/Components/CategoriaMenu/Default.cshtml
+++ b/Views/Shared/Components/CategoriaMenu/Default.cshtml
@@ -1,17 +1,15 @@
 <div class="dropdown">
-  <a class="btn btn-secondary dropdown-toggle" role="button"
-   id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-    Lanches
-  </a>
+  <a class="nav-link text-light" dropdown-toggle" role="button"
+       id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Lanches</a>
 
-  <ul class="dropdown-menu">
+  <ul class="dropdown-menu" >
     @foreach (var categoria in Model)
     {
         <li><a class="dropdown-item" asp-controller="Lanches" asp-action="List" style="color:black" 
         asp-route-categoria="@categoria.Nome">@categoria.Nome</a></li>    
     }
     
-    <li class="dropdown-divder"></li>
+    <li><hr class="dropdown-divider"></li>
     <li><a class="dropdown-item" asp-controller="Lanches" asp-action="List" style="color:black" 
         asp-route-categoria="">Todos os Lanches</a></li>    
   </ul>
