Implementando Autenticação e Autorização
foi implementado login, registro e authorize

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                             @await Component.InvokeAsync("CategoriaMenu")
                         </li>
                     </ul>
+                    @await Html.PartialAsync("_LoginPartial.cshtml");
                     <form class="navbar-form navbar-right" asp-controller="Lanches" asp-action="Search" method="get">
                         <div class="form-group">
 
