Criando Area Admin
criado area/admin e implementado autorização de acesso

--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -7,12 +7,11 @@
   <title>Admin Panel</title>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="~/bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="~/bower_components/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="~/bower_components/Ionicons/css/ionicons.min.css">
   <link rel="stylesheet" href="~/dist/css/AdminLTE.min.css">
   <link rel="stylesheet" href="~/dist/css/skins/skin-blue.min.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+    <script src="https://kit.fontawesome.com/440d4aea8e.js" crossorigin="anonymous" defer></script>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -32,45 +31,13 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <span class="hidden-xs">@User.Identity.Name</span>
               </a>
-              <ul class="dropdown-menu">
-                <li class="user-body">
-                  <div class="row">
-                    <div class="col-xs-4 text-center">
-                      <a href="#">Conta</a>
-                    </div>
-                  </div>
-                </li>
-                <!-- Menu Footer-->
-                <li class="user-footer">
-                  <div class="pull-left">
-                    @* <a href="#" class="btn btn-default btn-flat">Perfil</a> *@
-                  </div>
-                  <div class="pull-right">
-                    <a asp-area="" asp-controller="Account" asp-action="Logout" class="btn btn-default btn-flat">Log out</a>
-                  </div>
-                </li>
-              </ul>
             </li>
           </ul>
         </div>
       </nav>
     </header>
-    <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
-      <!-- sidebar: style can be found in sidebar.less -->
       <section class="sidebar">
-        <!-- Sidebar user panel (optional) -->
-        <div class="user-panel">
-          <div class="pull-left image">
-            <img src="~/dist/img/mac_160x160.jpg" class="img-circle" alt="Imagem do usuário">
-          </div>
-          <div class="pull-left info">
-            <p>@User.Identity.Name:</p>
-            
-            <!-- Status -->
-             <p><i class="fa fa-circle text-success"> Online</i></p>
-          </div>
-        </div>
         @Html.Partial("_MainMenu")
       </section>
     </aside>
@@ -78,11 +45,11 @@
       @RenderBody()
     </div>
     <footer class="main-footer">
-      <strong>Copyright &copy; 2022 <a href="#">Torrigo</a>.</strong> All rights reserved.
+      <strong>Copyright &copy; 2023 <a href="#"></a></strong> All rights reserved.
     </footer>
   </div>
-  <script src="~/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="~/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="~/lib/jquery/dist/jquery.min.js"></script>
+  <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="~/dist/js/adminlte.min.js"></script>
 </body>
 
