--- a/Areas/Admin/Views/Admin/Index.cshtml
+++ b/Areas/Admin/Views/Admin/Index.cshtml
@@ -1,6 +1,10 @@
-<section class="content-header">
-    <img src="~/images/admin.jpg">
-</section>
-<section class="content container-fluid">
-    
-</section>
+<img src="~/images/adminarea.jpg" alt="Àrea de Administração"  class="marginTop1"/>
+<div class="container">
+    <div class="jumbotron">
+        <p>
+           <h2>Esta é a área do Administrador</h2>
+        </p>
+    </div>
+    <a asp-area="" asp-controller="Home" asp-action="Index">Volta a Home Page</a>
+</div>
+
