Refatorcao Admin e View/Controller Relatorio

--- a/Areas/Admin/Views/AdminCategorias/Index.cshtml
+++ b/Areas/Admin/Views/AdminCategorias/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<LanchesMac.Models.Categoria>
+@model ReflectionIT.Mvc.Paging.PagingList<LanchesMac.Models.Categoria>
 
 @{
     ViewData["Title"] = "Categorias";
@@ -6,37 +6,49 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<form method="get" class="form-inline">
+    <input name="filter" class="form-control" placeholder="filtro" value="@Model.RouteValue["Filter"]" />
+    <button type="submit" class="btn btn-info">
+        <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Procurar
+    </button>
+</form>
+Total de Pedidos : @Model.TotalRecordCount
+<div>
+    <vc:pager paging-list="@Model"></vc:pager>
+</div>
+
 <p>
     <a asp-action="Create" class="btn btn-secondary">Criar Nova Categoria</a>
 </p>
 <table class="table table-hover">
-<thead>
-    <tr class="table-dark">
+    <thead>
+        <tr class="table-dark">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Nome)
+                    @Html.DisplayNameFor(model => model.Nome)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Descricao)
+                    @Html.DisplayNameFor(model => model.Descricao)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descricao)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.CategoriaId" class="btn btn-success">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CategoriaId" class="btn btn-primary">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CategoriaId" class="btn btn-danger">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descricao)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.CategoriaId" class="btn btn-success">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.CategoriaId" class="btn btn-primary">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.CategoriaId" class="btn btn-danger">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
