--- a/Areas/Admin/Views/AdminLanches/Create.cshtml
+++ b/Areas/Admin/Views/AdminLanches/Create.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-10">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Lanche.DescricaoLonga" class="control-label"></label>
-                <input asp-for="Lanche.DescricaoLonga" class="form-control" height="300px" >
+                <input asp-for="Lanche.DescricaoLonga" class="form-control" height="300px">
                 <span asp-validation-for="Lanche.DescricaoLonga" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -40,19 +40,22 @@
                 <input asp-for="Lanche.ImagemThumbnailUrl" class="form-control" />
                 <span asp-validation-for="Lanche.ImagemThumbnailUrl" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Lanche.LanchePreferido" /> Preferido?
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Lanche.EmEstoque" /> Em Estoque
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="Lanche.CategoriaId" class="control-label">Categoria</label>
-                <select asp-for="Lanche.CategoriaId" class ="form-control" asp-items="@(new SelectList(Model.Categorias, "CategoriaId", "Nome"))"></select>
+            <div class="row">
+                <div class="form-group col-sm-4">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="Lanche.LanchePreferido" /> Preferido?
+                    </label>
+                </div>
+                <div class="form-group col-sm-4">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="Lanche.EmEstoque" /> Em Estoque
+                    </label>
+                </div>
+                <div class="form-group col-sm-4">
+                    <label asp-for="Lanche.CategoriaId" class="control-label">Categoria</label>
+                    <select asp-for="Lanche.CategoriaId" class="form-control"
+                        asp-items="@(new SelectList(Model.Categorias, "CategoriaId", "Nome"))"></select>
+                </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-primary" /> &nbsp;
