--- a/Areas/Admin/Views/AdminLanches/Index.cshtml
+++ b/Areas/Admin/Views/AdminLanches/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<LanchesMac.Models.Lanche>
+@model ReflectionIT.Mvc.Paging.PagingList<LanchesMac.Models.Lanche>
 
 @{
     ViewData["Title"] = "Lanches";
@@ -6,12 +6,23 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<form method="get" class="form-inline">
+    <input name="filter" class="form-control" placeholder="filtro" value="@Model.RouteValue["Filter"]" />
+    <button type="submit" class="btn btn-info">
+        <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Procurar
+    </button>
+</form>
+Total de Pedidos : @Model.TotalRecordCount
+<div>
+    <vc:pager paging-list="@Model"></vc:pager>
+</div>
+
 <p>
     <a asp-action="Create" class="btn btn-secondary">Criar Novo Lanche</a>
 </p>
 <table class="table table-hover">
-<thead>
-    <tr>
+    <thead>
+        <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Nome)
             </th>
