Implementacao do gerenciamento de imagens
criado as view/controller para adicionar/visualizar/deletar imagens

--- a/Areas/Admin/Views/Admin/Index.cshtml
+++ b/Areas/Admin/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-<img src="~/images/adminarea.jpg" alt="Àrea de Administração"  class="marginTop1"/>
+<img src="~/images/admin.jpg" alt="Àrea de Administração"  class="marginTop1"/>
 <div class="container">
     <div class="jumbotron">
         <p>
