--- a/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using LanchesMac.Models
 @using LanchesMac.Models.ViewModels
 @using ReflectionIT.Mvc.Paging
+@using System.IO
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper LanchesMac.TagHelpers.*, LanchesMac
 @addTagHelper *, ReflectionIT.Mvc.Paging
