--- a/Views/Shared/_LanchesResumo.cshtml
+++ b/Views/Shared/_LanchesResumo.cshtml
@@ -1,7 +1,7 @@
 @model Lanche
 
 <div class="col-sm-4 col-md-4 col-lg-4">
-    <p><img src="@Model.ImagemUrl" class="img-fluid"></p>
+    <p><img src="@Model.ImagemUrl" class="img-fluid" asp-append-version="true"></p>
 
     <h3>@Model.Preco.ToString("C")</h3>
     <h4>
